--- a/Ukraine Analysis Phase 1 + 2.ipynb
+++ b/Ukraine Analysis Phase 1 + 2.ipynb
@@ -587,9 +587,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#removing stopwords and urls, stemming, making lowercase \n",
+    "#removing stopwords and urls, lemmatization, making lowercase \n",
     "stop_words = stopwords.words('english')\n",
-    "stemmer = SnowballStemmer('english')\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "text_cleaning_re = \"@|https?:\\S+|http?:\\S|[^A-Za-z0-9]+\"\n",
     "\n",
@@ -599,7 +599,7 @@
     "    for token in text.split():\n",
     "        if token not in stop_words:\n",
     "            if stem:\n",
-    "                tokens.append(stemmer.stem(token))\n",
+    "                tokens.append(lemmatizer.lemmatize(token))\n",
     "            else:\n",
     "                tokens.append(token)\n",
     "    return \" \".join(tokens)"
