--- a/Ukraine Analysis Phase 1 + 2.ipynb
+++ b/Ukraine Analysis Phase 1 + 2.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import SnowballStemmer"
+    "from nltk.stem import WordNetLemmatizer"
    ]
   },
   {
